# pyproject.toml

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gas_simulation"
version = "1.0.0"
description = "A tool to simulate gases as balls undergoing elastic collisions, and visualise those simulations."
readme = "README.md"
authors = [{ name = "Christopher Holland", email = "chris.henry.holland@gmail.com" }]

license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["pygame", "simulation", "animation", "gas", "ball", "elastic collision", "gravity"]
dependencies = [
    "sortedcontainers>=2.4.0",
    "pygame>=2.1.3",
    "pygame_display_component_classes @ git+https://github.com/chris-henry-holland/pygame-DisplayComponents",
]
requires-python = ">=3.11"

[project.urls]
Repository = "https://github.com/chris-henry-holland/pygame-GasSimulation.git"

[project.scripts]
start-gas-simulation = "gas_simulation.__main__:main"